--- a/Bike/Bike/Base.lproj/Main.storyboard
+++ b/Bike/Bike/Base.lproj/Main.storyboard
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6751" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="1dH-Bn-ah7">
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6736"/>
     </dependencies>
     <scenes>
@@ -15,9 +16,26 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="P9S-Vj-DQL" customClass="ImagePlayerView">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="100"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="100" id="jpM-pS-DVm"/>
+                                </constraints>
+                            </view>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="P9S-Vj-DQL" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="A6d-5d-5nh"/>
+                            <constraint firstAttribute="trailing" secondItem="P9S-Vj-DQL" secondAttribute="trailing" id="BcI-Q2-tE6"/>
+                            <constraint firstItem="P9S-Vj-DQL" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="iyO-6g-p7e"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="rfg-9v-ihG"/>
+                    <connections>
+                        <outlet property="imagePlayerView" destination="P9S-Vj-DQL" id="x7v-fH-Krc"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
