修改工程忽略文件和停止跟踪hmap\dgph、dat等文件

--- a/Bike/Bike/Base.lproj/Main.storyboard
+++ b/Bike/Bike/Base.lproj/Main.storyboard
@@ -93,7 +93,7 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="zCb-oN-acy" secondAttribute="bottom" id="2oH-7q-Yee"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="zCb-oN-acy" secondAttribute="bottom" id="8mX-ks-Byh"/>
                             <constraint firstItem="zCb-oN-acy" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="Hi0-eW-TqO"/>
                             <constraint firstItem="Lg2-Ln-V03" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="MYm-2x-SN8"/>
                             <constraint firstItem="zCb-oN-acy" firstAttribute="top" secondItem="Lg2-Ln-V03" secondAttribute="bottom" id="MjK-iO-6iX"/>
